Add systemd service unit.Add Dockerfile to build image

--- a/src/main/resources/bootstrap.properties
+++ b/src/main/resources/bootstrap.properties
@@ -3,8 +3,8 @@ info.version=@project.version@
 spring.application.name=discovery-service
 spring.cloud.config.fail-fast=true
 spring.cloud.config.label=config-dev
-eureka.instance.hostname=192.168.17.164
+#eureka.instance.hostname=192.168.17.164
 #spring.cloud.config.uri=http://localhost:8001/
-eureka.client.serviceUrl.defaultZone=http://192.168.17.164:8002/eureka/,http://192.168.17.164:8003/eureka/
+#eureka.client.serviceUrl.defaultZone=http://192.168.17.164:8002/eureka/,http://192.168.17.164:8003/eureka/
 
 ## 375bb36beec3 - 8003, 371f97300a5d - 8002
