--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.wiziq.infrastucture</groupId>
-	<artifactId>wiziq-infrastucture-discovery-service</artifactId>
+	<artifactId>discovery-service</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
@@ -21,20 +21,11 @@
 		<java.version>1.7</java.version>
 	</properties>
 
-	<dependencies>		
-
+	<dependencies>
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-eureka-server</artifactId>
 		</dependency> 
-
-	 <!--	<dependency>
-			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-starter-consul-all</artifactId>
-			<version>1.0.0.M5</version>
-		</dependency> -->
-
-
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
@@ -57,15 +48,7 @@
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-				<executions>
-					<execution>
-						<configuration>
-							<finalName>app</finalName>
-						</configuration>
-					</execution>
-				</executions>
-
+				<artifactId>spring-boot-maven-plugin</artifactId>			
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
